# MLIRod

./: README.md
data/: README.md
data/0.bug detection/0.MLIRod/: MLIRod-1.txt  MLIRod-2.txt  MLIRod-3.txt  MLIRod-4.txt  MLIRod-5.txt
data/0.bug detection/1.MLIRSmith/: MLIRSmith-1.txt  MLIRSmith-2.txt  MLIRSmith-3.txt  MLIRSmith-4.txt  MLIRSmith-5.txt
data/0.bug detection/2.coverage variants/MLIRod-edge/: MLIRod-edge-1.txt  MLIRod-edge-2.txt  MLIRod-edge-3.txt  MLIRod-edge-4.txt  MLIRod-edge-5.txt
data/0.bug detection/2.coverage variants/MLIRod-random/: MLIRod-random-1.txt  MLIRod-random-2.txt  MLIRod-random-3.txt  MLIRod-random-4.txt  MLIRod-random-5.txt
data/0.bug detection/3.mutation variants/no-node-deletion(R2)/: MLIRodno-no-node-deletion-1.txt  (+4 more)
data/0.bug detection/4.no-pass/: no-pass-1.txt  no-pass-2.txt  no-pass-3.txt  no-pass-4.txt  no-pass-5.txt
data/0.bug detection/5.NNSmith/: nnsmith-onnx-mlir-hour-cov-1.txt  nnsmith-onnx-mlir-hour-cov-2.txt  nnsmith-onnx-mlir-hour-cov-3.txt  nnsmith-onnx-mlir-hour-cov-4.txt  nnsmith-onnx-mlir-hour-cov-5.txt
data/1.covered dialects/: MLIRSmith-1.txt  MLIRSmith-2.txt  MLIRSmith-3.txt  MLIRSmith-4.txt  MLIRSmith-5.txt  MLIRod-1.txt  MLIRod-2.txt  MLIRod-3.txt  MLIRod-4.txt  MLIRod-5.txt  no-pass-1.txt  no-pass-2.txt  no-pass-3.txt  no-pass-4.txt  no-pass-5.txt
example/: readme.md
exp/: README.md
exp/0.MLIRod/: mlirfuzz.py
exp/1.MLIRSmith/: mlirsmith.py
exp/2.mutation variants/no-control-edge-modification/: mlirfuzz.py
exp/2.mutation variants/no-data-edge-modification/: mlirfuzz.py
exp/2.mutation variants/no-node-deletion/: mlirfuzz.py
exp/2.mutation variants/no-node-insertion/: mlirfuzz.py
exp/3.coverage variants/MLIRod-edgecov/: mlirfuzz.py
exp/3.coverage variants/MLIRod-random/: mlirfuzz.py
exp/4.no-pass/: mlirfuzz.py  opt.txt
exp/5.NNSmith/: collectcov.py  nnsmith.py
scripts/: mlirfuzz.py
src/mlir-fuzz-smith/mlir/examples/toy/CreateNode/: AffineNodeGenerator.cpp  ArithNodeGenerator.cpp  BufferizationNodeGenerator.cpp  CMakeLists.txt  IndexNodeGenerator.cpp  LinalgNodeGenerator.cpp  MathNodeGenerator.cpp  MemrefNodeGenerator.cpp  SCFNodeGenerator.cpp  SpirvNodeGenerator.cpp  TensorNodeGenerator.cpp  TosaNodeGenerator.cpp  TypeBase.cpp  ValuePool.cpp  VectorNodeGenerator.cpp  main.cpp
src/mlir-fuzz-smith/mlir/examples/toy/CreateNode/include/: MutationUtil.h  NodeGenerator.h  Traverse.h  TypeBase.h  ValuePool.h
src/mlir-fuzz-smith/mlir/examples/toy/ReplaceControlEdge/: CMakeLists.txt  main.cpp
src/mlir-fuzz-smith/mlir/examples/toy/ReplaceControlEdge/include/: MutationUtil.h  Traverse.h
src/mlir-fuzz-smith/mlir/tools/mlirsmith/: CMakeLists.txt  toyc.cpp
src/mlir-fuzz-smith/mlir/tools/mlirsmith/include/smith/: DiversityCriteria.h  MLIRSmith.h  TmplInstantiation.h  TypeGeneration.h  TypeValue.h  TypedValuePool.h  Util.h  config.h
src/mlir-fuzz-smith/mlir/tools/mlirsmith/include/smith/generators/: OpGeneration.h
src/mlir-fuzz-smith/mlir/tools/mlirsmith/include/toy/: CMakeLists.txt  Dialect.h  Ops.td  Passes.h
src/mlir-fuzz-smith/mlir/tools/mlirsmith/mlir/: Dialect.cpp
src/mlir-fuzz-smith/mlir/tools/mlirsmith/smith/: MLIRSmith.cpp  OpPrinterPass.cpp  RegionGeneration.cpp  TmplInstantiation.cpp  TypedValuePool.cpp  Util.cpp  ValueGeneration.cpp
src/mlir-fuzz-smith/mlir/tools/mlirsmith/smith/generators/: AffineGeneratorProvider.cpp  ArithGeneratorProvider.cpp  BufferizationGeneratorProvider.cpp  FuncGeneratorProvider.cpp  LinalgGeneratorProvider.cpp  MemrefGeneratorProvider.cpp  OpGeneratorProvider.cpp  SCFGeneratorProvider.cpp  SPIRVGeneratorProvider.cpp  TensorGeneratorProvider.cpp  VectorGeneratorProvider.cpp
(+398 files in other folders)
